--- a/WL.ipynb
+++ b/WL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,11 +285,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clauses = load_dimacs('instances/LNP-6.txt')"
+    "clauses = load_dimacs('instances/8queens.txt')"
    ]
   },
   {
@@ -335,19 +335,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UsageError: Line magic function `%lprun` not found.\n"
+      "3.55 ms ± 378 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%lprun -f dpll_sat_solve dpll_sat_solve(clauses)"
+    "%timeit dpll_sat_solve(clauses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.43 ms ± 64.8 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit dpll_sat_solve(clauses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 374,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Timer unit: 1e-07 s\n",
+      "\n",
+      "Total time: 0.0073978 s\n",
+      "File: C:\\Users\\Michal\\AppData\\Local\\Temp\\ipykernel_5864\\2021012760.py\n",
+      "Function: unit_propagate at line 1\n",
+      "\n",
+      "Line #      Hits         Time  Per Hit   % Time  Line Contents\n",
+      "==============================================================\n",
+      "     1                                           def unit_propagate(dict, units, partial_assignment):\n",
+      "     2                                               # Init\n",
+      "     3        25         61.0      2.4      0.1      units_propagated = [] # Unit literals that have so far been set to true\n",
+      "     4        25        147.0      5.9      0.2      u_literals = list(units)\n",
+      "     5                                           \n",
+      "     6       433        693.0      1.6      0.9      while u_literals:\n",
+      "     7                                                   # If there is complement pair in the literal list then there is a conflict\n",
+      "     8                                                   # e.g. if 1 and -1 are in the list then both of them cannot be true\n",
+      "     9       410       9846.0     24.0     13.3          if containsComplementPair(u_literals):\n",
+      "    10                                                       # Unassign all the variables that have been so far set to true during unit prop and return\n",
+      "    11        23       1247.0     54.2      1.7              unassignVars(partial_assignment, units_propagated)\n",
+      "    12        23         36.0      1.6      0.0              return False\n",
+      "    13                                                   \n",
+      "    14                                                   # Dequeue next unit literal\n",
+      "    15       410       1291.0      3.1      1.7          var = u_literals.pop(0)\n",
+      "    16                                           \n",
+      "    17                                                   # Set the unit literal to true and add new unit literals to the queue\n",
+      "    18       410      57835.0    141.1     78.2          newUnits = setVar(dict, var, partial_assignment)\n",
+      "    19       410       1846.0      4.5      2.5          u_literals.extend(list(newUnits))\n",
+      "    20                                           \n",
+      "    21       410        973.0      2.4      1.3          units_propagated.append(var)\n",
+      "    22                                           \n",
+      "    23         2          3.0      1.5      0.0      return units_propagated"
+     ]
+    }
+   ],
+   "source": [
+    "%lprun -f unit_propagate dpll_sat_solve(clauses)"
    ]
   },
   {
@@ -381,6 +445,16 @@
    "outputs": [],
    "source": [
     "%load_ext line_profiler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverseList(clauses):\n",
+    "    return reversed(clauses)"
    ]
   },
   {
